# TrustShield

./: .dockerignore  .gitattributes  .gitignore  .hfignore  Dockerfile  Dockerfile.server  README.md  context.md  openenv.yaml  pyproject.toml  requirements-server.txt  requirements.txt
demo/: demo_script.md
results/: .gitkeep  baseline_transcripts.md  generalization_report.md  phase3_final_transcripts.md  phase3_fixed_transcripts.md  phase3_transcripts.md
results/phase3_final/: README.md
results/phase3_fixed/: README.md
results/phase3_real/: README.md
results/phase4_results/: training_complete.flag  training_log_phase4.json
scenarios/control/: ctrl_legitimate_001.json  ctrl_legitimate_002.json  ctrl_legitimate_003.json  ctrl_legitimate_004.json  ctrl_legitimate_005.json  ctrl_legitimate_006.json
scenarios/eval/: .gitkeep  ctrl_eval_001.json  ctrl_eval_002.json  t3_cross_department_override_006.json  t3_emotional_breakdown_003.json  t3_hr_confidentiality_breach_007.json  t3_multi_vector_001.json  t3_policy_subversion_002.json  t3_recursive_pressure_005.json  t3_social_engineering_chain_004.json  t3_vendor_blackmail_008.json
scenarios/holdout/: h1_cross_team_impersonation_001.json  h2_vendor_pressure_002.json  h3_policy_argument_003.json  h4_hr_privacy_breach_004.json  h5_recursive_escalation_005.json
training/: baseline_eval.py  push_to_hf.py  test_data.json  test_generalization.py  train_data.json  train_grpo.ipynb  train_grpo.py  train_grpo1.ipynb  train_grpo1.py
trustshield/: __init__.py  curriculum.py  env.py  policy.py  server.py  verifier.py
(+60 files in other folders)
